--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
                 <button class="btn">Sort</button>
             </div>
         </nav>
+
+        <nav class="py-3 flex gap-5 justify-center" id="categories"></nav>
     </header>
+
+    <main>
+        <section id="videos" class="w-11/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 py-10"></section>
+    </main>
+
+
+
+    <!-- scripts -->
+     <script src="scripts/video.js"></script>
 </body>
 </html>
